# mini-code-assistant

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: 00-core-problem.md  01-pipeline.md  02-chunking.md  03-embeddings.md  04-vector-store.md  05-retrieval.md  06-llm.md  concepts.md  interview-qa.md
evals/: cases.json  run_eval.py
src/: __init__.py  chunker.py  cli.py  config.py  embedder.py  index_store.py  llm.py  retriever.py
tests/: .gitkeep
tests/integration/: test_pipeline.py
tests/unit/: test_chunker.py  test_cli.py  test_embedder.py  test_index_store.py  test_llm.py  test_retriever.py
