[project]
name = "mini-code-assistant"
version = "0.2.0"
description = "A minimal Retrieval-Augmented Generation assistant that answers questions about a codebase."
readme = "README.md"
requires-python = ">=3.13"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"] # pycodestyle, pyflakes, isort, pyupgrade, bugbear

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
pythonpath = ["."] # makes `from src.chunker import ...` resolve from repo root
testpaths = ["tests"]
addopts = "--import-mode=importlib" # tests in unit/ AND integration/ - avoids basename clashes